# ofxSocketIO

./: .gitignore  CMakeLists.txt  README.md  install_socketio.sh
example/: CMakeLists.txt  README.md  README_MODERN.md  install_socketio.sh
example/example.xcodeproj/: project.pbxproj
example/src/: ofApp.cpp
src/: ofxSocketIO.cpp  ofxSocketIO.h  ofxSocketIOData.cpp  ofxSocketIOData.h  ofxSocketIOModern.h
